--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travelling_schedule = None"
+    "travelling_schedule = \"I will be travelling\" +  None"
    ]
   },
   {
