automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travelling_schedule = \"I will be travelling \" + \"\""
+    "travelling_schedule = \"I will be travelling \" + number_of_weeks + \"\""
    ]
   },
   {
