--- a/index.ipynb
+++ b/index.ipynb
@@ -144,9 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "must be str, not int",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-ee36771c2f7f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtravelling_schedule\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"I will be travelling \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnumber_of_weeks\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" starting in the month of \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtravel_month\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
+     ]
+    }
+   ],
    "source": [
     "travelling_schedule = \"I will be travelling \" + number_of_weeks + \" starting in the month of \" + travel_month"
    ]
