automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "travelling_schedule = \"I will be travelling \" + number_of_weeks + \" starting in the month of \" + travel_month"
+    "travelling_schedule = \"I will be travelling \" + str(number_of_weeks + \" starting in the month of \" + travel_month"
    ]
   },
   {
