automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,20 +144,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I will be travelling 5 starting in the month of January'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tr"
+    "travelling_schedule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travelling_schedule = \"I will be travelling \" + str(number_of_weeks) + \" starting in the month of \" + travel_month"
+    "travelling_schedule = \"I will be travelling \" + str(number_of_weeks) + \" weeks starting in the month of \" + travel_month"
    ]
   },
   {
